# openhantek

./: .gitignore  .travis.yml  openhantek.pro  readme.md  translations.qrc
firmware/: 90_hantek.rules
libDemoDevice/: deviceDemo.h  libDemoDevice.pro  sineWaveDevice.cpp  sineWaveDevice.h
libOpenHantek2xxx-5xxx/: hantekDevice.cpp  hantekDevice.h  hantekDeviceAcquisition.cpp  hantekDeviceInit.cpp  init.cpp  init.h  libOpenHantek2xxx-5xxx.pro  protocol.cpp  protocol.h  protocolBulk.h  protocolControl.h
libOpenHantek60xx/: HT6022BEfw.c  HT6022BEfw.h  HT6022BLfw.c  HT6022BLfw.h  hantekDevice.cpp  hantekDevice.h  init.cpp  init.h  libOpenHantek60xx.pro  protocol.h
libOpenHantek60xx/firmware/: hönicke_fw.ihx
libPostprocessingDSO/: dataAnalyzer.cpp  dataAnalyzer.h  dataAnalyzerSettings.h  libPostprocessingDSO.pro
libusbDSO/: deviceBase.cpp  deviceBase.h  deviceBaseSamples.cpp  deviceBaseSamples.h  deviceBaseSpecifications.h  deviceDescriptionEntry.h  deviceList.cpp  deviceList.h  devicedummy.cpp  devicedummy.h  dsoSettings.h  dsoSpecification.h  errorcodes.h  libusbDSO.pro  usbCommunication.cpp  usbCommunication.h  usbCommunicationQueues.cpp  usbCommunicationQueues.h
libusbDSO/utils/: containerStream.h  stdStringSplit.h  stdstringsplit.cpp  timestampDebug.h  transferBuffer.cpp  transferBuffer.h
openhantek/: CMakeLists.txt  cmake_install.cmake  openhantek.pro
openhantek/res/: Makefile  cmake_install.cmake
openhantek/src/: OpenHantekMainWindow.cpp  OpenHantekMainWindow.h  configpages.cpp  currentdevice.cpp  currentdevice.h  devicedialog.cpp  devicedialog.h  devicemodel.cpp  devicemodel.h  dockwindows.cpp  dockwindows.h  dso.cpp  dso.h  dsocontrol.cpp  dsocontrol.h  dsowidget.cpp  dsowidget.h  exporter.cpp  exporter.h  glgenerator.cpp  glgenerator.h  glscope.cpp  glscope.h  helper.cpp  main.cpp  openhantek.cpp  openhantek.h  parameters.cpp  parameters.h  requests.h  settings.cpp  settings.h
openhantek/translations/: Makefile  cmake_install.cmake  openhantek_de.qm  openhantek_de.ts  openhantek_pt.qm  openhantek_pt.ts
openhantek2/: openhantek2.pro  qml.qrc
openhantek2/plot/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qpcurve.cpp  qpcurve.h  qpfixedscaleengine.cpp  qpfixedscaleengine.h  qpplotitem.cpp  qpplotitem.h  qpscaleengine.cpp  qpscaleengine.h  qpscrollingcurve.cpp  qpscrollingcurve.h  qptightscaleengine.cpp  qptightscaleengine.h  quickplot.qmlproject  quickplotplugin.cpp  quickplotplugin.h
openhantek2/plot/imports/QuickPlot/: Axes.qml  AxisLabels.qml  PlotArea.qml  Tick.qml  qmldir
openhantek2/src/: #main.cpp#  currentdevice.cpp  currentdevice.h  devicemodel.cpp  exporter.cpp  exporter.h  main.cpp  modeldatasetter.cpp  modeldatasetter.h  parameters.cpp  parameters.h  scopecolors.cpp  scopecolors.h
openhantek2/ui/: DeviceList.qml  ExpandableItem.qml  ExportDialog.qml  main.qml  (+8 more)
udev/: 90-hantek.rules
(+24 files in other folders)
